# Gambitz.fun

./: .gitattributes  .gitignore  CODEBASE_AUDIT.md  Dockerfile  README.md  frontend_page_structure.md  generate_fresh_idl.sh  get_bs58_private_key.js  lib_fixed.rs  openings.csv  package.json  payer.json  pnpm-lock.yaml  tsconfig.json
.cursor/rules/: contracts.mdc  web.mdc
.github/workflows/: ci.yml
.husky/: pre-commit
contracts/: .gitignore  Anchor.toml  Cargo.toml  package.json  tsconfig.json
contracts/programs/wager/: Cargo.toml
contracts/programs/wager/src/: lib.rs  state.rs
contracts/tests/: game_flow.ts  royalty_split.ts  settle_flow.ts  wager.ts
docs/: data-pipeline.md  design.md
scripts/: _shared.ts  apply_anchor_fix.sh  convert_idl.js  create_nft_tree.ts  gen_openings_json.ts  list_tree_assets.ts  mint_openings.ts  offchain_elo_service.ts  opening_data.ts  opening_data_out.ts  peek_fens.ts  run_elo_service.sh  run_full_elo_service.sh  simple_elo_service.ts  verify_cnfts.ts
scripts/anticheat/: stockfish_analyzer.ts
scripts/data/: Cargo.toml  collect_pgn.ts  eval_fens.ts  (+7 more)
src/: server.ts
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-500-8sVF1KUwkMVp38v8hip4YqXxM937DtvyMAY5U4NjtmUJ.tar.zst  snapshot-600-H6q29efgW1y8YrHVQFQn4EbEea4mpM7GoFuYcedbV3ow.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
v0_frontend_import/: .placeholder
web/: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  jest.config.js  jest.setup.js  next.config.js  package.json  tailwind.config.ts  tsconfig.json
(+80 files in other folders)
